--- a/src/theme/fonts/flaticon.scss
+++ b/src/theme/fonts/flaticon.scss
@@ -59,89 +59,40 @@ Creation date: 13/11/2016 18:59
   font-style: normal;
 
 }
-
-.flaticon-animals:before {
-  content: "\f100";
-}
-
-.flaticon-bill:before {
-  content: "\f101";
-}
-
-.flaticon-car:before {
-  content: "\f102";
-}
-
-.flaticon-dress:before {
-  content: "\f103";
-}
-
-.flaticon-entertainment:before {
-  content: "\f104";
-}
-
-.flaticon-food:before {
-  content: "\f105";
-}
-
-.flaticon-gifts:before {
-  content: "\f106";
-}
-
-.flaticon-gifts-2:before {
-  content: "\f107";
-}
-
-.flaticon-health:before {
-  content: "\f108";
-}
-
-.flaticon-job:before {
-  content: "\f109";
-}
-
-.flaticon-learning:before {
-  content: "\f10a";
-}
-
-.flaticon-medical:before {
-  content: "\f10b";
-}
-
-.flaticon-other:before {
-  content: "\f10c";
-}
-
-.flaticon-phone:before {
-  content: "\f10d";
-}
-
-.flaticon-repairs:before {
-  content: "\f10e";
-}
-
-.flaticon-sport:before {
-  content: "\f10f";
-}
-
-.flaticon-travel:before {
-  content: "\f110";
-}
+.flaticon-animals:before { content: "\f100"; }
+.flaticon-beauty:before { content: "\f101"; }
+.flaticon-bill:before { content: "\f102"; }
+.flaticon-car:before { content: "\f103"; }
+.flaticon-dress:before { content: "\f104"; }
+.flaticon-entertainment:before { content: "\f105"; }
+.flaticon-food:before { content: "\f106"; }
+.flaticon-gifts:before { content: "\f107"; }
+.flaticon-gifts-2:before { content: "\f108"; }
+.flaticon-health:before { content: "\f109"; }
+.flaticon-internet:before { content: "\f10a"; }
+.flaticon-job:before { content: "\f10b"; }
+.flaticon-learning:before { content: "\f10c"; }
+.flaticon-other:before { content: "\f10d"; }
+.flaticon-repairs:before { content: "\f10e"; }
+.flaticon-sport:before { content: "\f10f"; }
+.flaticon-transport:before { content: "\f110"; }
+.flaticon-travel:before { content: "\f111"; }
 
 $font-Flaticon-animals: "\f100";
-$font-Flaticon-bill: "\f101";
-$font-Flaticon-car: "\f102";
-$font-Flaticon-dress: "\f103";
-$font-Flaticon-entertainment: "\f104";
-$font-Flaticon-food: "\f105";
-$font-Flaticon-gifts: "\f106";
-$font-Flaticon-gifts-2: "\f107";
-$font-Flaticon-health: "\f108";
-$font-Flaticon-job: "\f109";
-$font-Flaticon-learning: "\f10a";
-$font-Flaticon-medical: "\f10b";
-$font-Flaticon-other: "\f10c";
-$font-Flaticon-phone: "\f10d";
+$font-Flaticon-beauty: "\f101";
+$font-Flaticon-bill: "\f102";
+$font-Flaticon-car: "\f103";
+$font-Flaticon-dress: "\f104";
+$font-Flaticon-entertainment: "\f105";
+$font-Flaticon-food: "\f106";
+$font-Flaticon-gifts: "\f107";
+$font-Flaticon-gifts-2: "\f108";
+$font-Flaticon-health: "\f109";
+$font-Flaticon-internet: "\f10a";
+$font-Flaticon-job: "\f10b";
+$font-Flaticon-learning: "\f10c";
+$font-Flaticon-other: "\f10d";
 $font-Flaticon-repairs: "\f10e";
 $font-Flaticon-sport: "\f10f";
-$font-Flaticon-travel: "\f110";
+$font-Flaticon-transport: "\f110";
+$font-Flaticon-travel: "\f111";
