--- a/src/components/transaction-item/transaction-item.component.html
+++ b/src/components/transaction-item/transaction-item.component.html
@@ -3,6 +3,9 @@
     <div class="b-transaction-item {{ transactionClass }}">
         <div class="transaction-item__data">
             <div class="transaction-item__icon">
+                <div class="transaction-item__inBudget">
+                    <ion-icon *ngIf="transaction.inBudget && transaction.type == 0" name="ios-checkmark-circle-outline"></ion-icon>
+                </div>
                 <category-icon-component [name]="transaction.slug"></category-icon-component>
             </div>
             <div>
