--- a/src/components/transaction-form/transaction-form.component.html
+++ b/src/components/transaction-form/transaction-form.component.html
@@ -11,7 +11,7 @@
     <div class="grid-row">
         <div class="grid-column-3 grid-padding grid-left" *ngFor="let category of categories;">
             <div class="container-category-group fadeIn animated">
-                <div [ngClass]="{'b-category': true, 'is-selected': category.id === idCategorySelected}" (click)="choiceCategory(category.id)">
+                <div [ngClass]="{'b-category': true, 'is-selected': category.id === idCategorySelected}" (click)="choiceCategory(category.id, category.slug, category.type)">
                     <category-icon-component [name]="category.slug"></category-icon-component>
                     <div class="category__name">{{ category.name }}</div>
                 </div>
