--- a/src/components/transaction-item/transaction-item.component.scss
+++ b/src/components/transaction-item/transaction-item.component.scss
@@ -23,6 +23,7 @@ transaction-item-component {
     top: 0;
     height: 20px;
     width: 20px;
+    font-size: 16px;
     color: $colorHigh;
     border-radius: 30px;
     display: flex;
