--- a/src/components/progressbar/progressbar.component.html
+++ b/src/components/progressbar/progressbar.component.html
@@ -4,6 +4,9 @@
     </div>
     <div class="progressbar__data">
         <span class="progressbar__title">{{ title }}</span>
-        <span class="progressbar__sum">{{ sumForDisplay }} &#8381;</span>
+        <div>
+            <span class="progressbar__percent"> {{ percent }}%</span>
+            <span class="progressbar__sum">{{ sumForDisplay }} &#8381;</span>
+        </div>
     </div>
 </div>
