--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,8 +86,8 @@ $ionicons-font-path: "../assets/fonts";
 // Colors category
 $colorFood: #E84C3D;
 $colorDress: #F59D1F;
-$colorCar: #34495E;
-$colorPhone: #297FB8;
+$colorCar: #75706B;
+$colorInternet: #297FB8;
 $colorAnimals: #4CAF50;
 $colorGifts: #03A9F4;
 $colorHealth: #C5382F;
@@ -97,6 +97,8 @@ $colorTravel: #67B9CE;
 $colorLearning: #8BC34A;
 $colorRepairs: #795548;
 $colorSport: #FF6F00;
+$colorBeauty: #D070DB;
+$colorTransport: #E3BE53;
 $colorOther: #9E9E9E;
 $colorJob: #4CAF50;
 $colorGifts2: #03A9F4;
