--- a/src/components/transaction-item/transaction-item.component.scss
+++ b/src/components/transaction-item/transaction-item.component.scss
@@ -24,16 +24,17 @@ transaction-item-component {
     height: 20px;
     width: 20px;
     font-size: 16px;
-    color: $colorHigh;
+    color: $firstColorApp;
     border-radius: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
   }
   .b-icon-category {
-    width: 50px;
-    height: 50px;
-    font-size: 3rem;
+    width: 55px;
+    height: 55px;
+    color: $secondColorApp;
   }
   .transaction-item__description {
     font-size: 1.5rem;
