--- a/src/components/transaction-modal/transaction-modal.component.html
+++ b/src/components/transaction-modal/transaction-modal.component.html
@@ -30,7 +30,7 @@
 
         <numbers-area-component [value]="outSum" (updatedSum)="updatedSum($event)"></numbers-area-component>
 
-        <div style="margin-top: 25px;" class="util-align-center">
+        <div style="margin: 20px 0;" class="util-align-center">
             <button  class="b-button-ready" ion-button [disabled]="!isDataFilled" ion-button type="submit">Готово</button>
         </div>
 
