--- a/src/theme/fonts/flaticon.scss
+++ b/src/theme/fonts/flaticon.scss
@@ -69,6 +69,7 @@ Creation date: 13/11/2016 18:59
 .flaticon-gifts:before { content: "\f107"; }
 .flaticon-gifts-2:before { content: "\f108"; }
 .flaticon-health:before { content: "\f109"; }
+.flaticon-phone:before { content: "\f10a"; }
 .flaticon-internet:before { content: "\f10a"; }
 .flaticon-job:before { content: "\f10b"; }
 .flaticon-learning:before { content: "\f10c"; }
@@ -89,6 +90,7 @@ $font-Flaticon-gifts: "\f107";
 $font-Flaticon-gifts-2: "\f108";
 $font-Flaticon-health: "\f109";
 $font-Flaticon-internet: "\f10a";
+$font-Flaticon-phone: "\f10a";
 $font-Flaticon-job: "\f10b";
 $font-Flaticon-learning: "\f10c";
 $font-Flaticon-other: "\f10d";
