print app version

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -34,6 +34,7 @@
 @import '../theme/components/sliding';
 @import '../theme/components/form';
 @import '../theme/components/segment';
+@import '../theme/components/footer';
 
 @import '../theme/blocks/balance-group';
 @import '../theme/blocks/category';
