--- a/src/components/transaction-action/transaction-action.component.scss
+++ b/src/components/transaction-action/transaction-action.component.scss
@@ -3,6 +3,7 @@ transaction-action-component {
   bottom: 75px;
   right: 0;
   left: 0;
+  z-index: 5;
   text-align: right;
   .button {
     height: 5.5rem;
