--- a/src/components/transaction-item/transaction-item.component.scss
+++ b/src/components/transaction-item/transaction-item.component.scss
@@ -81,3 +81,13 @@ transaction-item-component {
     font-size: 2.2rem;
   }
 }
+
+
+.controls-item {
+  .button {
+    width: 60px;
+    ion-icon {
+      font-size: 2.2em;
+    }
+  }
+}
