--- a/src/pages/templates/templates.html
+++ b/src/pages/templates/templates.html
@@ -17,18 +17,18 @@
     <div *ngIf="totalCount > 0">
         <div class="container-templates-list">
             <ion-list>
-                <ion-item-sliding *ngFor="let template of templates; let i = index;">
+                <ion-item-sliding *ngFor="let template of templates; let position = index;">
                     <ion-item>
                         <transaction-item-component [transaction]="template"></transaction-item-component>
                     </ion-item>
-                    <ion-item-options class="controls-template" side="right">
+                    <ion-item-options class="controls-item" side="right">
                         <button ion-button icon-only color="create" (click)="createTransaction($event, template.templateId)">
                             <ion-icon name="ios-add"></ion-icon>
                         </button>
                         <button ion-button icon-only color="update" (click)="updateTemplate($event, template)">
                             <ion-icon name="ios-refresh"></ion-icon>
                         </button>
-                        <button ion-button icon-only color="remove" (click)="deleteTemplate($event, template.templateId, i)">
+                        <button ion-button icon-only color="remove" (click)="deleteTemplate($event, template.templateId, position)">
                             <ion-icon name="ios-close"></ion-icon>
                         </button>
                     </ion-item-options>
